--- a/test/index.html
+++ b/test/index.html
@@ -14,17 +14,17 @@
     WCT._config.environmentScripts.push(shadow ? 'webcomponentsjs/webcomponents.js' : 'webcomponentsjs/webcomponents-lite.js');
 
     WCT.loadSuites([
-      'basic.html',
-      'dropdown.html',
-      'overlay.html',
-      'month-calendar.html',
-      'scroller.html',
-      'form-input.html',
-      'custom-input.html',
-      'keyboard-navigation.html',
-      'keyboard-input.html',
-      'late-upgrade.html',
-      'angular2.html'
+      // 'basic.html',
+      // 'dropdown.html',
+      // 'overlay.html',
+      // 'month-calendar.html',
+      // 'scroller.html',
+      // 'form-input.html',
+      // 'custom-input.html',
+      // 'keyboard-navigation.html',
+      'keyboard-input.html'
+      // 'late-upgrade.html',
+      // 'angular2.html'
     ]);
   </script>
 </body>
