Try again do remove padding for icons

--- a/vaadin-date-picker.html
+++ b/vaadin-date-picker.html
@@ -164,7 +164,7 @@ If you want to replace the default input field with a custom implementation, you
 
       #input {
         box-sizing: border-box;
-        padding-right: 28px;
+        padding-right: 0;
       }
 
       #input::-ms-clear {
