--- a/vaadin-date-picker-overlay.html
+++ b/vaadin-date-picker-overlay.html
@@ -202,7 +202,7 @@
 
       #header paper-input-container {
         flex: 1;
-        margin-right: 0;
+        margin-right: 24px;
         padding-bottom: 0;
         --paper-input-container-underline: {
           display: none;
