--- a/vaadin-date-picker-overlay.html
+++ b/vaadin-date-picker-overlay.html
@@ -258,12 +258,12 @@
       <paper-input-container>
         <label>[[label]]</label>
         <input id="input" readonly is="iron-input" autocomplete="off" bind-value="[[_formatDisplayed(selectedDate, i18n.formatDate)]]">
-        <iron-icon id="clear" suffix on-tap="_clear" icon="vaadin-date-picker:clear" showclear$="[[_showClear(selectedDate)]]" hidden></iron-icon>
+        <iron-icon id="clear" suffix on-click="_clear" icon="vaadin-date-picker:clear" showclear$="[[_showClear(selectedDate)]]" hidden></iron-icon>
       </paper-input-container>
-      <iron-icon id="toggle" icon="vaadin-date-picker:event" on-tap="_cancel" hidden></iron-icon>
+      <iron-icon id="toggle" icon="vaadin-date-picker:event" on-click="_cancel" hidden></iron-icon>
     </div>
 
-    <div id="toolbar" desktop$="[[_desktopMode]]" on-tap="_toggleYearScroller" aria-hidden="true">
+    <div id="toolbar" desktop$="[[_desktopMode]]" on-click="_toggleYearScroller" aria-hidden="true">
       [[_yearAfterXMonths(_visibleMonthIndex)]]
       <iron-icon rotate$="[[_isYearScrollerVisible(_translateX)]]" icon="vaadin-date-picker:chevron-right"></iron-icon>
     </div>
@@ -285,7 +285,7 @@
           </vaadin-month-calendar>
         </template>
       </vaadin-infinite-scroller>
-      <vaadin-infinite-scroller id="yearScroller" on-tap="_onYearTap" on-custom-scroll="_onYearScroll" on-touchstart="_onYearScrollTouchStart" item-height="80" buffer-size="25" active="[[initialPosition]]">
+      <vaadin-infinite-scroller id="yearScroller" on-click="_onYearTap" on-custom-scroll="_onYearScroll" on-touchstart="_onYearScrollTouchStart" item-height="80" buffer-size="25" active="[[initialPosition]]">
         <template>
           <div role="button">[[_yearAfterXYears(index)]]</div>
           <div style="font-size: 18px; line-height: 56px; opacity: 0.3;" aria-hidden="true">•</div>
@@ -294,10 +294,10 @@
     </div>
 
     <div id="footer" on-touchend="_preventDefault" role="toolbar">
-      <paper-button id="todayButton" disabled="[[!_isTodayAllowed(minDate, maxDate)]]" on-tap="_onTodayTap">
+      <paper-button id="todayButton" disabled="[[!_isTodayAllowed(minDate, maxDate)]]" on-click="_onTodayTap">
         [[i18n.today]]
       </paper-button>
-      <paper-button id="cancelButton" on-tap="_cancel">
+      <paper-button id="cancelButton" on-click="_cancel">
         [[i18n.cancel]]
       </paper-button>
     </div>
