--- a/vaadin-date-picker.html
+++ b/vaadin-date-picker.html
@@ -199,11 +199,11 @@ If you want to replace the default input field with a custom implementation, you
           disabled$="[[disabled]]"
           readonly$="[[readonly]]"
           no-input$="[[_noInput]]" />
-      <div suffix id="clear" on-tap="_clear" role="button" aria-label$="[[i18n.clear]]" hidden>
+      <div suffix id="clear" on-click="_clear" role="button" aria-label$="[[i18n.clear]]" hidden>
         <iron-icon icon="vaadin-date-picker:clear"></iron-icon>
         <paper-ripple class="circle" center></paper-ripple>
       </div>
-      <div suffix id="calendar" on-tap="_toggle" role="button" aria-label$="[[i18n.calendar]]" aria-expanded$="[[_getAriaExpanded(opened)]]" hidden>
+      <div suffix id="calendar" on-click="_toggle" role="button" aria-label$="[[i18n.calendar]]" aria-expanded$="[[_getAriaExpanded(opened)]]" hidden>
         <iron-icon icon="vaadin-date-picker:event"></iron-icon>
         <paper-ripple class="circle" center></paper-ripple>
       </div>
