--- a/vaadin-date-picker-behavior.html
+++ b/vaadin-date-picker-behavior.html
@@ -491,6 +491,11 @@
       this._documentPointerEvents = document.body.style.pointerEvents;
       document.body.style.pointerEvents = 'none';
 
+      // Workaround for Chrome 62+, without it clicks on date cells don't work
+      var _pointerEvents = this.style.pointerEvents;
+      this.style.pointerEvents = 'auto';
+      this.style.pointerEvents = _pointerEvents;
+
       this._ignoreAnnounce = false;
     },
 
