--- a/vaadin-date-picker-behavior.html
+++ b/vaadin-date-picker-behavior.html
@@ -493,12 +493,15 @@
 
       // Workaround for Chrome 62+, without it clicks on date cells don't work
       let chromeVersion = this.getChromeVersion();
+      let chrome62Fix = false;
       if (chromeVersion >= 62) {
         console.log('chromeVersion',chromeVersion);
         var _pointerEvents = this.style.pointerEvents;
         this.style.pointerEvents = 'auto';
         this.style.pointerEvents = _pointerEvents;
+        chrome62Fix = true;
       }
+      alert('Chrome Version: ' + chromeVersion.toString() + ' -- 62 fix: ' + chrome62Fix);
 
       this._ignoreAnnounce = false;
     },
