--- a/demo/index.html
+++ b/demo/index.html
@@ -23,6 +23,13 @@
       </template>
     </demo-snippet>
 
+    <h3>Hide clear and calendar icons date picker</h3>
+    <demo-snippet>
+      <template>
+        <vaadin-date-picker hideclear="true" hidecalendar="true"></vaadin-date-picker>
+      </template>
+    </demo-snippet>
+
     <h3>Label attribute</h3>
     <demo-snippet>
       <template>
